# renta-anualidad-vencida-valor-futuro

./: Cargo.toml  README.md  aprox-infonavit.csv  infonavit.csv  infonavit.json  irina.csv  srRobles.csv  test.csv  uno.csv  uno.json  vacaciones.csv
src/: cli.yml  lib.rs  main.rs  types.rs
tareas/: TABLAS de Amortizacion y Depreciacion.ods  TABLAS de Amortizacion y Depreciacion.odt  ejercicio.org
