[package]
name = "renta-anualidad-vencida-valor-futuro"
version = "0.1.0"
authors = ["rodrigo debian <correo.rodrigo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"